Start using fragments. Display a "connecting" screen (even when in offline mode)

--- a/QuMixDroid/res/layout/activity_main.xml
+++ b/QuMixDroid/res/layout/activity_main.xml
@@ -6,476 +6,12 @@
   http://www.gnu.org/licenses/gpl.html
   
   Contributors:
-      george wieggers - initial API and implementation
+      george wieggers - initial API and implementation                 
 -->
-<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:id="@+id/scrollview1"
-    android:fillViewport="true"    
-    >
-<TableLayout 
-    android:layout_width="wrap_content"
-    android:layout_height="fill_parent"
-    android:stretchColumns="*"
-    tools:ignore="TooManyViews" >
-
-    <TableRow
-        android:id="@+id/tableRow1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-
-        <org.wieggers.qu_apps.controls.bound.BoundMuteToggleButton
-            android:id="@+id/mute1"
-            style="@style/MuteButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMuteToggleButton
-            android:id="@+id/mute2"
-            style="@style/MuteButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMuteToggleButton
-            android:id="@+id/mute3"
-            style="@style/MuteButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMuteToggleButton
-            android:id="@+id/mute4"
-            style="@style/MuteButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMuteToggleButton
-            android:id="@+id/mute5"
-            style="@style/MuteButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMuteToggleButton
-            android:id="@+id/mute6"
-            style="@style/MuteButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMuteToggleButton
-            android:id="@+id/mute7"
-            style="@style/MuteButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMuteToggleButton
-            android:id="@+id/mute8"
-            style="@style/MuteButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMuteToggleButton
-            android:id="@+id/mute9"
-            style="@style/MuteButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMuteToggleButton
-            android:id="@+id/mute10"
-            style="@style/MuteButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMuteToggleButton
-            android:id="@+id/mute11"
-            style="@style/MuteButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMuteToggleButton
-            android:id="@+id/mute12"
-            style="@style/MuteButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMuteToggleButton
-            android:id="@+id/mute13"
-            style="@style/MuteButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMuteToggleButton
-            android:id="@+id/mute14"
-            style="@style/MuteButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMuteToggleButton
-            android:id="@+id/mute15"
-            style="@style/MuteButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMuteToggleButton
-            android:id="@+id/mute16"
-            style="@style/MuteButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMuteToggleButton
-            android:id="@+id/mute17"
-            style="@style/MuteButton" />
-    </TableRow>
-
-    <TableRow
-        android:id="@+id/tableRow2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/assign1"
-			style="@style/AssignButton" />
-        
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/assign2"
-			style="@style/AssignButton" />
-        
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/assign3"
-			style="@style/AssignButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/assign4"
-			style="@style/AssignButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/assign5"
-			style="@style/AssignButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/assign6"
-			style="@style/AssignButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/assign7"
-			style="@style/AssignButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/assign8"
-			style="@style/AssignButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/assign9"
-			style="@style/AssignButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/assign10"
-			style="@style/AssignButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/assign11"
-			style="@style/AssignButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/assign12"
-			style="@style/AssignButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/assign13"
-			style="@style/AssignButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/assign14"
-			style="@style/AssignButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/assign15"
-			style="@style/AssignButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/assign16"
-			style="@style/AssignButton" />
-        
-        <Spinner
-            android:id="@+id/spMix"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:entries="@array/mixes"
-            android:spinnerMode="dropdown" />
-        
-    </TableRow>
-
-    <TableRow
-        android:id="@+id/tableRow3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pre1"
-			style="@style/PreButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pre2"
-			style="@style/PreButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pre3"
-			style="@style/PreButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pre4"
-			style="@style/PreButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pre5"
-			style="@style/PreButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pre6"
-			style="@style/PreButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pre7"
-			style="@style/PreButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pre8"
-			style="@style/PreButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pre9"
-			style="@style/PreButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pre10"
-			style="@style/PreButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pre11"
-			style="@style/PreButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pre12"
-			style="@style/PreButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pre13"
-			style="@style/PreButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pre14"
-			style="@style/PreButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pre15"
-			style="@style/PreButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pre16"
-			style="@style/PreButton" />
-
-        <ToggleButton
-            android:id="@+id/tbLayer1"
-            style="@style/LayerButton"
-            android:textOff="@string/layer_1"
-            android:textOn="@string/layer_1" />
-    </TableRow>
-
-    <TableRow
-        android:id="@+id/tableRow4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixRotaryKnob 
-            android:id="@+id/pan1"
-            style="@style/PanButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixRotaryKnob 
-            android:id="@+id/pan2"
-            style="@style/PanButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixRotaryKnob 
-            android:id="@+id/pan3"
-            style="@style/PanButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixRotaryKnob 
-            android:id="@+id/pan4"
-            style="@style/PanButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixRotaryKnob 
-            android:id="@+id/pan5"
-            style="@style/PanButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixRotaryKnob 
-            android:id="@+id/pan6"
-            style="@style/PanButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixRotaryKnob 
-            android:id="@+id/pan7"
-            style="@style/PanButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixRotaryKnob 
-            android:id="@+id/pan8"
-            style="@style/PanButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixRotaryKnob 
-            android:id="@+id/pan9"
-            style="@style/PanButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixRotaryKnob 
-            android:id="@+id/pan10"
-            style="@style/PanButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixRotaryKnob 
-            android:id="@+id/pan11"
-            style="@style/PanButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixRotaryKnob 
-            android:id="@+id/pan12"
-            style="@style/PanButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixRotaryKnob 
-            android:id="@+id/pan13"
-            style="@style/PanButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixRotaryKnob 
-            android:id="@+id/pan14"
-            style="@style/PanButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixRotaryKnob 
-            android:id="@+id/pan15"
-            style="@style/PanButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixRotaryKnob 
-            android:id="@+id/pan16"
-            style="@style/PanButton" />
-
-                
-        <ToggleButton
-            android:id="@+id/tbLayer2"
-            style="@style/LayerButton"
-            android:textOff="@string/layer_2"
-            android:textOn="@string/layer_2" />
-
-    </TableRow>
-
-    <TableRow
-        android:id="@+id/tableRow5"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1" >
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixFader
-            android:id="@+id/fader1"
-            style="@style/Fader" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixFader
-            android:id="@+id/fader2"
-            style="@style/Fader" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixFader
-            android:id="@+id/fader3"
-            style="@style/Fader" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixFader
-            android:id="@+id/fader4"
-            style="@style/Fader" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixFader
-            android:id="@+id/fader5"
-            style="@style/Fader" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixFader
-            android:id="@+id/fader6"
-            style="@style/Fader" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixFader
-            android:id="@+id/fader7"
-            style="@style/Fader" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixFader
-            android:id="@+id/fader8"
-            style="@style/Fader" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixFader
-            android:id="@+id/fader9"
-            style="@style/Fader" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixFader
-            android:id="@+id/fader10"
-            style="@style/Fader" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixFader
-            android:id="@+id/fader11"
-            style="@style/Fader" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixFader
-            android:id="@+id/fader12"
-            style="@style/Fader" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixFader
-            android:id="@+id/fader13"
-            style="@style/Fader" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixFader
-            android:id="@+id/fader14"
-            style="@style/Fader" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixFader
-            android:id="@+id/fader15"
-            style="@style/Fader" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixFader
-            android:id="@+id/fader16"
-            style="@style/Fader" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixFader
-            android:id="@+id/fader17"
-            style="@style/Fader" />
-    </TableRow>
-<!-- 
-    <TableRow
-        android:id="@+id/tableRow6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pafl1"
-			style="@style/PaflButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pafl2"
-			style="@style/PaflButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pafl3"
-			style="@style/PaflButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pafl4"
-			style="@style/PaflButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pafl5"
-			style="@style/PaflButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pafl6"
-			style="@style/PaflButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pafl7"
-			style="@style/PaflButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pafl8"
-			style="@style/PaflButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pafl9"
-			style="@style/PaflButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pafl10"
-			style="@style/PaflButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pafl11"
-			style="@style/PaflButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pafl12"
-			style="@style/PaflButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pafl13"
-			style="@style/PaflButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pafl14"
-			style="@style/PaflButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pafl15"
-			style="@style/PaflButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pafl16"
-			style="@style/PaflButton" />
-
-        <org.wieggers.qu_apps.controls.bound.BoundMixToggleButton
-            android:id="@+id/pafl17"
-			style="@style/PaflButton" />              
-    </TableRow>
-    -->
-
-</TableLayout>
-</HorizontalScrollView>
+    android:id="@+id/main_frame"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
+
+</FrameLayout>
