--- a/QuMixDroid/res/values/styles.xml
+++ b/QuMixDroid/res/values/styles.xml
@@ -25,8 +25,8 @@
 
     <style name="CustomToggleButton">
         <item name="android:minHeight">40dp</item>
-        <item name="android:minWidth">50dp</item>
-        <item name="android:layout_width">50dp</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">1dp</item>        
     </style>
@@ -68,11 +68,13 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">1dp</item>
+        <item name="android:gravity">center_horizontal</item>
     </style>
         
     <style name="Fader">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">match_parent</item>        
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:gravity">center_horizontal</item>        
     </style>
     
 </resources>
